<resources>
    <string name="app_name">Touch</string>
    <string name="textview">TextView</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="github">Github</string>
    
    <string name="your_card_id">YOUR CARD ID</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="input_your_card_s_id_here">Input your card\'s id here</string>
    <string name="input_your_card_s_password_here">Input your card\'s password here</string>
    <string name="upload_your_new_profile">UPLOAD YOUR NEW PROFILE</string>

    <string name="sync_connected_contact">SYNC CONNECTED CONTACT</string>
    <string name="edit_your_profile">EDIT YOUR PROFILE</string>
</resources>
