<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <!--NAME-->
        <TextView
            android:id="@+id/viewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#777777"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/outputViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="5dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c4c4c4"
            android:layout_margin="5dp"/>

        <!--EMail-->
        <TextView
            android:id="@+id/viewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#777777"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/outputViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="5dp"
            android:autoLink="email"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c4c4c4"
            android:layout_margin="5dp"/>

        <!--Phone-->
        <TextView
            android:id="@+id/viewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="#777777"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/outputViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="5dp"
            android:autoLink="phone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c4c4c4"
            android:layout_margin="5dp"/>
        <!--Birthday-->
        <TextView
            android:id="@+id/viewBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textColor="#777777"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/outputViewBirthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="5dp"
            android:autoLink="none"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c4c4c4"
            android:layout_margin="5dp"/>
        <!--Facebook-->
        <TextView
            android:id="@+id/viewFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:textColor="#777777"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/outputViewFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="5dp"
            android:autoLink="web" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c4c4c4"
            android:layout_margin="5dp"/>
        <!--Twitter-->
        <TextView
            android:id="@+id/viewTwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            android:textColor="#777777"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/outputViewTwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="5dp"
            android:autoLink="web"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c4c4c4"
            android:layout_margin="5dp"/>
        <!--Github-->
        <TextView
            android:id="@+id/viewGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/github"
            android:textColor="#777777"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/outputViewGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="5dp"
            android:autoLink="web"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>